--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <div class="informacoes">
       <p><span>Data:</span> <span id="data-atual"></span></p>
-      <p><span>Valor Recebido:</span> R$ 1.000,00</p>
-      <p><span>De:</span> João Silva de Oliveira</p>
+      <p><span>Valor Recebido:</span> R$ 600,00</p>
+      <p><span>De:</span> Pedro Nascimento Bastos</p>
       <p><span>Status:</span> Recebido com Sucesso</p>
     </div>
 
